--- a/.github/workflows/device.yaml
+++ b/.github/workflows/device.yaml
@@ -1,19 +1,30 @@
-name: C/C++ CI
+name: C++ CI with GoogleTest
 
 on:
   push:
-    branches: [ "main", "nemirko" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "nemirko" ]
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: make
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install GoogleTest
+      run: |
+        sudo apt update
+        sudo apt install -y libgtest-dev cmake
+        cd /usr/src/gtest
+        sudo cmake CMakeLists.txt
+        sudo make
+        sudo cp lib/*.a /usr/lib
+
+    - name: Build project
       run: make
-    - name: execute
+
+    - name: Run tests
       run: ./a.out
