--- a/.github/workflows/device.yaml
+++ b/.github/workflows/device.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -27,21 +28,32 @@ jobs:
 
       - name: Build project with coverage flags
         run: |
-          # compile tests with coverage flags
           g++ -std=c++20 device.cpp -o tests \
             -lgtest -lgtest_main -pthread \
             -fprofile-arcs -ftest-coverage
 
       - name: Run tests
-        run: |
-          ./tests
+        run: ./tests
 
-      - name: Generate coverage JSON for badge
+      - name: Generate raw gcovr coverage
         run: |
-          # produce JSON summary (gcovr must be installed)
-          gcovr --json-summary -o coverage.json .
+          gcovr --json-summary -o coverage_raw.json .
 
-      - name: Publish coverage.json to gh-pages
+      - name: Convert coverage to Shields.io format
+        run: |
+          PERC=$(python3 - <<EOF
+            import json
+            with open("coverage_raw.json") as f:
+            data=json.load(f)
+            print(int(round(data.get("line_percent", 0))))
+            EOF
+            )
+          COLOR="red"
+          if [ $PERC -ge 80 ]; then COLOR="green"; elif [ $PERC -ge 50 ]; then COLOR="yellow"; fi
+
+          echo "{\"schemaVersion\":1,\"label\":\"coverage\",\"message\":\"${PERC}%\",\"color\":\"${COLOR}\"}" > coverage.json
+
+      - name: Publish coverage badge to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -49,4 +61,3 @@ jobs:
           publish_branch: gh-pages
           keep_files: true
           allow_empty_commit: true
-
